Fixed bug where dots were not passed to plot.gam, some clean-ups

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 /*.Rcheck/
 # RStudio files
 .Rproj.user/
+*.Rproj
 # produced vignettes
 vignettes/*.html
 vignettes/*.pdf
@@ -23,4 +24,10 @@ vignettes/*.pdf
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
-.Rproj.user
+
+
+## dropbox
+*.dropbox.attr
+
+## folders
+sandbox/
