--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,18 @@
 Package: mgcvtools
 Title: Utility functions for work with the mgcv package
-Version: 0.0.1
+Version: 0.0.101
 Authors@R: person("Andreas", "Bender", email = "bender.at.R@gmail.com", role = c("aut", "cre"))
 Description: Some utility functions for work with mgcv gam objects.
 Depends:
-    R (>= 3.3.2)
+    R (>= 3.3.1)
 Imports:
 		checkmate,
 		ggplot2,
 		tidyr,
 		dplyr,
 		mgcv
-License: MIT
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 5.0.1
+Suggests: testthat
