--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,9 @@ export(tidy_s)
 import(mgcv)
 importFrom(checkmate,assert_class)
 importFrom(dplyr,bind_rows)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,png)
+importFrom(graphics,plot)
+importFrom(stats,ppoints)
+importFrom(stats,qnorm)
+importFrom(stats,quantile)
